<resources>
    <string name="app_name">ZhetesAbylaikhanCalculator</string>
    <string name="main">Main Calculator</string>
    <string name="distance_calculator">Distance Calculator</string>
    <string name="weight_calculator">Weight Calculator</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="welcome_main_calculator">Welcome to main calculator!</string>
    <string name="calculate">Calculate!</string>
    <string name="welcome_distance_calculator">Welcome to Distance Calculator!</string>
    <string name="from">From</string>
    <string name="kg">Kg</string>
    <string name="km">Km</string>
    <string name="millies">Millies</string>
    <string name="mm">Mm</string>
    <string name="to">To</string>
    <string name="enter_a_number">Enter a number</string>
    <string name="mg">Mg</string>
    <string name="Ng">Ng</string>
    <string name="welcome_weight_calculator">Weight</string>
</resources>