<?xml version="1.0" encoding="utf-8"?>
<layout>

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:orientation="vertical"
        android:padding="@dimen/root_view_default_padding"
        tools:context=".ui.distance_calculator.DistanceCalculatorFragment">

        <TextView
            style="@style/BasicDesignTextView.Title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="30dp"
            android:text="@string/welcome_distance_calculator" />

        <EditText
            android:id="@+id/etNumberDistanceCalculator"
            style="@style/BasicDesignEditText"
            android:layout_width="match_parent"
            android:layout_height="@dimen/edit_text_default_height"
            android:layout_marginBottom="30dp"
            android:hint="@string/enter_a_number" />

        <TextView
            style="@style/BasicDesignTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"

            android:layout_marginBottom="30dp"
            android:text="@string/from" />

        <RadioGroup
            android:id="@+id/rgDistanceFrom"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="30dp"
            android:gravity="center_horizontal"
            android:orientation="horizontal">

            <RadioButton
                android:checked="true"
                android:id="@+id/rbDistanceFromKm"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:text="@string/km" />

            <RadioButton
                android:id="@+id/rbDistanceFromMm"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:text="@string/mm" />

            <RadioButton
                android:id="@+id/rbDistanceFromMillies"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:text="@string/millies" />
        </RadioGroup>

        <TextView

            style="@style/BasicDesignTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="30dp"
            android:text="@string/to" />

        <RadioGroup
            android:id="@+id/rgDistanceTo"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="30dp"
            android:gravity="center_horizontal"
            android:orientation="horizontal">

            <RadioButton
                android:checked="true"
                android:id="@+id/rbDistanceToKm"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:text="@string/km" />

            <RadioButton
                android:id="@+id/rbDistanceToMm"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:text="@string/mm" />

            <RadioButton
                android:id="@+id/rbDistanceToMillies"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:text="@string/millies" />
        </RadioGroup>

        <TextView
            android:id="@+id/tvDistanceResult"
            style="@style/BasicDesignTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="0" />
    </LinearLayout>
</layout>